segmentation-service added, user-service updated

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,5 @@
-rootProject.name = 'spring-boot-app'
+rootProject.name = 'spring-boot-app-multi-module'
+
+include 'user-service'
+include 'segmentation-service'
+include 'common'
