--- a/build.gradle
+++ b/build.gradle
@@ -1,41 +1,3 @@
-plugins {
-	id 'org.springframework.boot' version '2.3.4.RELEASE'
-	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
-	id 'java'
-	id "com.palantir.docker" version "0.25.0"
-}
+group 'by.issoft.training'
+version '1.0-SNAPSHOT'
 
-group = 'by.issoft.training'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
-
-configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
-}
-
-repositories {
-	mavenCentral()
-}
-
-docker {
-	name "springbootapp"
-	dockerfile file('src/docker/Dockerfile')
-	copySpec.from(jar).rename(".*","app.jar")
-	buildArgs(['JAR_FILE': "app.jar"])
-}
-
-dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
-	compileOnly 'org.projectlombok:lombok:1.18.12'
-	annotationProcessor 'org.projectlombok:lombok:1.18.12'
-	compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.11.2'
-}
-
-test {
-	useJUnitPlatform()
-}
