--- a/segmentation-service/build.gradle
+++ b/segmentation-service/build.gradle
@@ -1,3 +1,4 @@
 dependencies {
     implementation project(':common')
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 }
