added docker-compose.yml file, orm and db modules

--- a/segmentation-service/build.gradle
+++ b/segmentation-service/build.gradle
@@ -1,4 +1,6 @@
 dependencies {
     implementation project(':common')
+    implementation project(':orm')
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
