--- a/segmentation-service/src/main/resources/application.yml
+++ b/segmentation-service/src/main/resources/application.yml
@@ -1,8 +1,14 @@
 server.port: 81
-advertising:
-  contentrating:
-    minage:
-      generalAudiences: 4
-      parentalGuidance: 9
-      teen: 12
-      matureAudiences: 17
+spring:
+  jpa:
+    hibernate:
+      ddl-auto: none
+    properties:
+      hibernate.cache.use_second_level_cache: false
+      hibernate.cache.use_query_cache: false
+      hibernate.show_sql: true
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://192.168.99.100:3306/segmentation
+    username: root
+    password: root
