--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,6 @@ rootProject.name = 'spring-boot-app-multi-module'
 include 'user-service'
 include 'segmentation-service'
 include 'common'
+include 'db'
+include 'orm'
+
